# PBL1_GITHUB

./: PBL.CPP  Person.h  giangvien.cpp  sinhvien.cpp
PBL1/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
PBL1/Giang Vien/: giangVien.cpp  giangVien.h  menuGV.cpp  menuGV.h
PBL1/Sinh Vien/: Sinhvien.cpp  Sinhvien.h  menuSV.cpp  menuSV.h
