cmake_minimum_required(VERSION 3.21)
project(PBL1)

set(CMAKE_CXX_STANDARD 14)

add_executable(PBL1 main.cpp "Giang Vien/giangVien.cpp" "Giang Vien/giangVien.h" "Sinh Vien/menuSV.cpp" "Sinh Vien/Sinhvien.cpp" "Sinh Vien/Sinhvien.h" "Person.h" "Sinh Vien/menuSV.h" "Giang Vien/menuGV.cpp" "Giang Vien/menuGV.h" Person.cpp)
